# Walle-Honors2024

./: .gitignore  CMakeLists.txt  Environment.h  README.md  package.xml
include/: Environment.h
include/install/: local_setup.sh  setup.sh
include/log/: latest_build
install/: local_setup.sh  setup.sh
install/dog_robot/lib/dog_robot/: environment_test
install/dog_robot/share/dog_robot/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dog_robot/share/dog_robot/cmake/: dog_robotConfig.cmake
log/: latest_build
robot_dog_gui/: CMakeLists.txt  main.cpp
src/: ClassroomEnvironment.cpp  ClassroomEnvironment.h  CollisionHandler.cpp  CollisionHandler.h  Enviornment.cpp  Environment.cpp  Environment.h  GameEnvironment.cpp  GameEnvironment.h  Point.h  TeleopMain.cpp  TeleopTurtle.cpp  TeleopTurtle.h  TrashTurtle.cpp  TrashTurtle.h  TrashType.h  Turtle.cpp  Turtle.h  UserTurtle.cpp  UserTurtle.h  main.cpp  robot.h
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
