<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_dog</name>
  <version>0.0.1</version>
  <description>
    A robot dog simulation environment leveraging turtlesim and ROS2.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Repository and bugtracker URLs -->
  <url type="repository">https://github.com/your-repository/robot_dog</url>
  <url type="bugtracker">https://github.com/your-repository/robot_dog/issues</url>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
